--- a/index.htm
+++ b/index.htm
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- ... (мета-теги, title, favicon, Google Fonts, Font Awesome, style.css) ... -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гадания Таро онлайн: получите предсказание бесплатно</title>
-    <meta name="description" content="Бесплатные онлайн гадания на картах Таро.  Выберите расклад, задайте вопрос и получите толкование карт.  Старшие и Младшие Арканы.">
-    <meta name="keywords" content="гадания таро, таро онлайн, гадание на картах таро, расклады таро, толкование карт таро, старшие арканы, младшие арканы, бесплатно">
+    <meta name="description" content="Бесплатные онлайн гадания на картах Таро, карта дня, гадание по часам.">
+    <meta name="keywords" content="гадания таро, таро онлайн, гадание на картах таро, расклады таро, толкование карт таро, карта дня, гадание по часам, одинаковые цифры на часах">
     <meta name="robots" content="index, follow">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome (если будете использовать иконки) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Мистический Портал Таро</h1>
-            <p>Откройте завесу будущего с помощью древних карт</p>
-        </header>
-
-        <section id="card-of-the-day">
-            <h2>Карта дня</h2>
-            <div id="cotd-container"></div>
-            <div id="cotd-interpretation"></div>
-        </section>
-
-        <section id="tarot-info">
-            <h2>О Таро</h2>
-            <p>Таро — это колода из 78 карт, используемая для гадания и самопознания.  Старшие Арканы представляют собой архетипические образы, а Младшие Арканы отражают повседневные события.</p>
-            <p>Каждая карта имеет своё значение, как в прямом, так и в перевёрнутом положении. Толкование зависит от расклада и контекста вопроса.</p>
-            <p><a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D1%80%D0%BE" target="_blank" rel="noopener noreferrer">Узнать больше о Таро (Википедия)</a></p>
-        </section>
+      <header class="site-header">
+        <h1>Мистический Портал</h1>
+      </header>
 
         <main>
             <div id="loading-indicator" style="display: none; text-align: center;">
@@ -37,32 +31,78 @@
             </div>
              <div id="error-message" style="display: none; color: red; text-align: center;">
             </div>
-            <section id="spread-selection">
-                <h2>Выберите расклад:</h2>
-                <select id="spread-type">
-                    <option value="one-card">Одна карта</option>
-                    <option value="three-card">Три карты (Прошлое, Настоящее, Будущее)</option>
-                    <option value="celtic-cross">Кельтский крест (10 карт)</option>
-                </select>
-                <label for="question">Ваш вопрос (необязательно):</label>
-                <textarea id="question" rows="3" placeholder="Задайте свой вопрос..."></textarea>
-                <button id="draw-cards">Тянуть карты</button>
-                <button id="generate-question">Случайный вопрос</button>
-            </section>
 
-            <section id="reading-result">
-                <h2>Результат гадания:</h2>
-                <div id="cards-container">
-                    <!-- Карты будут здесь -->
-                </div>
-                <div id="interpretation">
-                    <!-- Толкования будут здесь -->
-                </div>
+            <!-- Вкладки -->
+            <div class="tabs">
+                <button class="tab-button active" data-tab="tarot">Гадание Таро</button>
+                <button class="tab-button" data-tab="cotd">Карта дня</button>
+                <button class="tab-button" data-tab="time">Гадание по часам</button>
+            </div>
+
+            <!-- Содержимое вкладок -->
+            <div id="tab-content">
+                <section id="tarot-tab" class="tab-content active">
+                    <!-- Секция гадания Таро -->
+                    <section id="spread-selection">
+                        <h2>Выберите расклад:</h2>
+                        <select id="spread-type">
+                            <option value="one-card">Одна карта</option>
+                            <option value="three-card">Три карты (Прошлое, Настоящее, Будущее)</option>
+                            <option value="celtic-cross">Кельтский крест (10 карт)</option>
+                        </select>
+                         <label for="sphere-select">Выберите сферу:</label>
+                        <select id="sphere-select">
+                            <option value="general">Общее значение</option>
+                            <option value="love">Любовь и отношения</option>
+                            <option value="work">Работа и карьера</option>
+                            <option value="finance">Финансы</option>
+                            <option value="health">Здоровье</option>
+                            <option value="spirituality">Духовность</option>
+                        </select>
+                        <button id="draw-cards">Тянуть карты</button>
+                    </section>
+
+                    <section id="reading-result">
+                        <h2>Результат гадания:</h2>
+                        <div id="cards-container">
+                            <!-- Карты будут здесь -->
+                        </div>
+                        <div id="interpretation">
+                            <!-- Толкования будут здесь -->
+                        </div>
+                    </section>
+                </section>
+
+                <section id="cotd-tab" class="tab-content">
+                    <!-- Секция карты дня (как раньше) -->
+                   <section id="card-of-the-day">
+                        <h2>Карта дня</h2>
+                        <div id="cotd-container"></div>
+                        <div id="cotd-interpretation"></div>
+                    </section>
+                </section>
+
+                <section id="time-tab" class="tab-content">
+                    <!-- Секция гадания по часам (как раньше) -->
+                   <section id="time-divination">
+                        <h2>Гадание по часам</h2>
+                        <p>Если вы увидели на часах одинаковые или зеркальные цифры, это может быть знаком! Введите время, которое вы видели:</p>
+                        <input type="text" id="time-input" placeholder="ЧЧММ" pattern="([01]?[0-9]|2[0-3]):?[0-5][0-9]" maxlength="5">
+                        <button id="time-divination-button">Узнать значение</button>
+                        <div id="hour-divination"></div>
+                    </section>
+                </section>
+            </div>
+             <section id="tarot-info">
+                <h2>О Таро</h2>
+                <p>Таро — это колода из 78 карт, используемая для гадания и самопознания.  Старшие Арканы представляют собой архетипические образы, а Младшие Арканы отражают повседневные события.</p>
+                <p>Каждая карта имеет своё значение, как в прямом, так и в перевёрнутом положении. Толкование зависит от расклада и контекста вопроса.</p>
+                <p><a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D1%80%D0%BE" target="_blank" rel="noopener noreferrer">Узнать больше о Таро (Википедия)</a></p>
             </section>
         </main>
 
         <footer>
-            <p>© <span id="current-year"></span> Мистический Портал Таро. Все права защищены.</p>
+            <p>© <span id="current-year"></span> Мистический Портал. Все права защищены.</p>
         </footer>
     </div>
 
