--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гадания Таро онлайн: расклады на картах, карта дня, толкование</title>
-    <meta name="description" content="Бесплатные онлайн гадания на картах Таро: расклады на одну, три карты и Кельтский крест. Узнайте толкование карт, получите совет. Карта дня и гадание по часам.">
-    <meta name="keywords" content="гадания таро, таро онлайн, гадание на картах таро, расклады таро, толкование карт, карта дня, гадание по часам, одинаковые цифры на часах">
+    <meta name="description"
+        content="Бесплатные онлайн гадания на картах Таро: расклады на одну, три карты и Кельтский крест. Узнайте толкование карт, получите совет. Карта дня и гадание по часам.">
+    <meta name="keywords"
+        content="гадания таро, таро онлайн, гадание на картах таро, расклады таро, толкование карт, карта дня, гадание по часам, одинаковые цифры на часах">
     <meta name="robots" content="index, follow">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Open Graph (для превью в соцсетях) -->
     <meta property="og:title" content="Гадания Таро онлайн">
-    <meta property="og:description" content="Бесплатные онлайн гадания на картах Таро: расклады, карта дня, толкования.">
+    <meta property="og:description"
+        content="Бесплатные онлайн гадания на картах Таро: расклады, карта дня, толкования.">
     <meta property="og:image" content="https://viktormalyuchenko.github.io/tarotApp/images/og-image.png">
     <meta property="og:url" content="https://viktormalyuchenko.github.io/tarotApp/">
     <meta property="og:type" content="website">
@@ -27,21 +35,25 @@
     <meta name="twitter:description" content="Бесплатные онлайн гадания на картах Таро.">
     <meta name="twitter:image" content="https://viktormalyuchenko.github.io/tarotApp/images/og-image.png">
     <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();
-    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
- 
-    ym(99841001, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true
-    });
- </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/99841001" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- <!-- /Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(99841001, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/99841001" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -54,18 +66,19 @@
     </script>
 
 </head>
+
 <body>
     <div class="container">
-      <header class="site-header">
-        <h1>Мистический Портал</h1>
-      </header>
+        <header class="site-header">
+            <h1>Мистический Портал</h1>
+        </header>
 
         <main>
             <div id="loading-indicator" style="display: none; text-align: center;">
                 <p>Загрузка данных карт...</p>
                 <div class="spinner"></div>
             </div>
-             <div id="error-message" style="display: none; color: red; text-align: center;">
+            <div id="error-message" style="display: none; color: red; text-align: center;">
             </div>
 
             <!-- Вкладки -->
@@ -86,7 +99,7 @@
                             <option value="three-card">Три карты (Прошлое, Настоящее, Будущее)</option>
                             <option value="celtic-cross">Кельтский крест (10 карт)</option>
                         </select>
-                         <label for="sphere-select">Выберите сферу:</label>
+                        <label for="sphere-select">Выберите сферу:</label>
                         <select id="sphere-select">
                             <option value="general">Общее значение</option>
                             <option value="love">Любовь и отношения</option>
@@ -96,7 +109,6 @@
                             <option value="spirituality">Духовность</option>
                         </select>
                         <button id="draw-cards">Тянуть карты</button>
-                        <button id="generate-question">Случайный вопрос</button>
                     </section>
 
                     <section id="reading-result" style="display: none;">
@@ -112,7 +124,7 @@
 
                 <section id="cotd-tab" class="tab-content">
                     <!-- Секция карты дня -->
-                   <section id="card-of-the-day">
+                    <section id="card-of-the-day">
                         <h2>Карта дня</h2>
                         <div id="cotd-container"></div>
                         <div id="cotd-interpretation"></div>
@@ -121,20 +133,24 @@
 
                 <section id="time-tab" class="tab-content">
                     <!-- Секция гадания по часам -->
-                   <section id="time-divination">
+                    <section id="time-divination">
                         <h2>Гадание по часам</h2>
                         <p>Введите время, которое вы видели:</p>
-                        <input type="text" id="time-input" placeholder="ЧЧММ" pattern="([01]?[0-9]|2[0-3]):?[0-5][0-9]" maxlength="5">
+                        <input type="text" id="time-input" placeholder="ЧЧММ" pattern="([01]?[0-9]|2[0-3]):?[0-5][0-9]"
+                            maxlength="5">
                         <button id="time-divination-button">Узнать значение</button>
                         <div id="hour-divination"></div>
                     </section>
                 </section>
             </div>
-             <section id="tarot-info">
+            <section id="tarot-info">
                 <h2>О Таро</h2>
-                <p>Таро — это колода из 78 карт, используемая для гадания и самопознания.  Старшие Арканы представляют собой архетипические образы, а Младшие Арканы отражают повседневные события.</p>
-                <p>Каждая карта имеет своё значение, как в прямом, так и в перевёрнутом положении. Толкование зависит от расклада и контекста вопроса.</p>
-                <p><a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D1%80%D0%BE" target="_blank" rel="noopener noreferrer">Узнать больше о Таро (Википедия)</a></p>
+                <p>Таро — это колода из 78 карт, используемая для гадания и самопознания. Старшие Арканы представляют
+                    собой архетипические образы, а Младшие Арканы отражают повседневные события.</p>
+                <p>Каждая карта имеет своё значение, как в прямом, так и в перевёрнутом положении. Толкование зависит от
+                    расклада и контекста вопроса.</p>
+                <p><a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D1%80%D0%BE" target="_blank"
+                        rel="noopener noreferrer">Узнать больше о Таро (Википедия)</a></p>
             </section>
         </main>
 
@@ -145,4 +161,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
